# sdg_mapping_queries_n_ml_benchmarks

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
sdg_mapping_queries_n_ml_benchmarks/: final_table.py  metrics.py  validate_query_output_vs_val_set.py
