[tool.poetry]
name = "ds-sdg-query-ml-benchmarks"
version = "0.1.0"
description = "Code for the SDG benchmarking experiments"
authors = ["Yury Kashnitsky <y.kashnitskiy@elsevier.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
