[tool.poetry]
name = "sdg_mapping_queries_n_ml_benchmarks"
version = "0.1.0"
description = "Code for the SDG benchmarking experiments"
authors = ["Yury Kashnitsky <y.kashnitskiy@elsevier.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^1.4.3"
numpy = "^1.23.3"
scipy = "^1.9.1"
scikit-learn = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
