[tool.poetry]
name = "sdg_mapping_queries_n_ml_benchmarks"
version = "0.1.0"
description = "Code for the SDG benchmarking experiments"
authors = ["Yury Kashnitsky <y.kashnitskiy@elsevier.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
openpyxl = "^3.1.2"
pandas = "^2.1.1"
numpy = "^1.26.1"
scipy = "^1.11.3"
scikit-learn = "^1.3.2"
tqdm = "^4.66.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
